@@ -475,6 +475,23 @@ name|HREGION_LOGDIR_NAME
 init|=
 literal|".logs"
 decl_stmt|;
+comment|/** Used to construct the name of the splitlog directory for a region server */
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|SPLIT_LOGDIR_NAME
+init|=
+literal|"splitlog"
+decl_stmt|;
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|CORRUPT_DIR_NAME
+init|=
+literal|".corrupt"
+decl_stmt|;
 comment|/** Like the previous, but for old logs that are about to be deleted */
 specifier|public
 specifier|static
@@ -1199,15 +1216,27 @@ operator|new
 name|String
 index|[]
 block|{
-literal|".logs"
+name|HREGION_LOGDIR_NAME
 block|,
-literal|".oldlogs"
+name|HREGION_OLDLOGDIR_NAME
 block|,
-literal|".corrupt"
+name|CORRUPT_DIR_NAME
 block|,
-literal|".META."
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|META_TABLE_NAME
+argument_list|)
 block|,
-literal|"-ROOT-"
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|ROOT_TABLE_NAME
+argument_list|)
+block|,
+name|SPLIT_LOGDIR_NAME
 block|}
 argument_list|)
 argument_list|)
