@@ -2945,13 +2945,32 @@ name|p
 parameter_list|)
 block|{
 name|boolean
-name|isdir
+name|isValid
 init|=
 literal|false
 decl_stmt|;
 try|try
 block|{
-name|isdir
+if|if
+condition|(
+name|HConstants
+operator|.
+name|HBASE_NON_USER_TABLE_DIRS
+operator|.
+name|contains
+argument_list|(
+name|p
+argument_list|)
+condition|)
+block|{
+name|isValid
+operator|=
+literal|false
+expr_stmt|;
+block|}
+else|else
+block|{
+name|isValid
 operator|=
 name|this
 operator|.
@@ -2966,6 +2985,7 @@ name|isDir
 argument_list|()
 expr_stmt|;
 block|}
+block|}
 catch|catch
 parameter_list|(
 name|IOException
@@ -2979,7 +2999,7 @@ argument_list|()
 expr_stmt|;
 block|}
 return|return
-name|isdir
+name|isValid
 return|;
 block|}
 block|}
