@@ -179,6 +179,20 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|HConstants
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|master
 operator|.
 name|SplitLogManager
@@ -811,7 +825,9 @@ name|Path
 argument_list|(
 name|rootdir
 argument_list|,
-literal|"splitlog"
+name|HConstants
+operator|.
+name|SPLIT_LOGDIR_NAME
 argument_list|)
 argument_list|,
 name|tmpname
