@@ -151,6 +151,7 @@ Release 0.91.0 - Unreleased
    HBASE-3904  HBA.createTable(final HTableDescriptor desc, byte [][] splitKeys)
                should be synchronous
    HBASE-4053  Most of the regions were added into AssignmentManager#servers twice
+   HBASE-4061  getTableDirs is missing directories to skip
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
